--- a/conFusion/css/styles.css
+++ b/conFusion/css/styles.css
@@ -6,7 +6,7 @@
 .row-content {
     margin: 0px auto;
     padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge #ffffff;
+    border-bottom: 0px ridge #ffffff;
     min-height: 400px;
 }
 
@@ -36,4 +36,10 @@ body {
 
 .navbar-dark {
     background-color: #512DA8;
+}
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
